--- a/index.html
+++ b/index.html
@@ -2,7 +2,19 @@
 <html lang="en-us"><head>
   <meta charset="utf-8">
   <title>kforest 33 - the website title shown on the tab</title>
-
+  
+  <link rel=preload href="https://quickstart-1.kfa330.workers.dev/images/favicon.png" as=image>
+  <link rel=preload href="https://quickstart-1.kfa330.workers.dev/images/logo.png" as=image>
+  <link rel=preload href="https://quickstart-1.kfa330.workers.dev/images/blog/post-3.jpg" as=image>
+  <link rel=preload href="https://quickstart-1.kfa330.workers.dev/images/blog/post-5.jpg" as=image>
+  <link rel=preload href="https://quickstart-1.kfa330.workers.dev/images/blog/post-2.jpg" as=image>
+  <link rel=preload href="https://quickstart-1.kfa330.workers.dev/images/portfolio/item-1.png" as=image>
+  <link rel=preload href="https://quickstart-1.kfa330.workers.dev/images/portfolio/item-3.png" as=image>
+  <link rel=preload href="https://quickstart-1.kfa330.workers.dev/images/portfolio/item-5.png" as=image>
+  <link rel=preload href="https://quickstart-1.kfa330.workers.dev/images/backgrounds/map.png" as=image>
+  <link rel=preload href="https://quickstart-1.kfa330.workers.dev/images/logo.png" as=image>
+  <link rel=preload href="https://quickstart-1.kfa330.workers.dev/fonts/BwNistaInt-xBd.woff" as=font>
+  
   <!-- mobile responsive meta -->
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
   <meta name="description" content="Enter K personal description">
